integrated animation & icon

--- a/animations.css
+++ b/animations.css
@@ -6,7 +6,7 @@ body {
     display:block;
     padding-left: 50px;
     padding-right: 50px;
-    width:13%;
+    width:500px;
 }
 
 .clickercontainer {
