make javascript work with html

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #FE2555;
 }
 
-#score {
+#scoredisplay {
     width : 90%;
     margin-right: 5%;
     margin-left : 5%;
