--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
     white-space: nowrap;
 }
 
+/*
 .active-multiplier {
     font-family: 'Alegreya Sans SC', sans-serif;
     color :  white;
@@ -37,9 +38,16 @@ body {
     width: inherit;
     background-color: #403A44;
     padding : 10px 10px;
-    border-radius: 50%;   
+    border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;  
     margin-left: -17px;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}*/
+
+#icone-multiplier {
+    width : 50px;
+    height: auto;
+    margin-left : -15px;
+    vertical-align: -50%;
 }
 
 .clicker {
