--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     white-space: nowrap;
 }
 
-/* .active-multiplier {
+ .active-multiplier {
     font-family: 'Alegreya Sans SC', sans-serif;
     color :  white;
     font-size : 25px;
@@ -38,9 +38,8 @@ body {
     background-color: #403A44;
     padding : 10px 10px;
     border-radius: 50%;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;  
     margin-left: -17px;
-} */
+} 
 
 #icone-multiplier {
     width : 50px;
