--- a/style.css
+++ b/style.css
@@ -41,16 +41,12 @@ body {
     margin-left: -17px;
 } 
 
-#icone-multiplier {
+.animation-score {
     width : 50px;
     height: auto;
     margin-left : -10px;
     vertical-align: -50%;
     filter: drop-shadow(0px 2px 0px #414141);
-    
-}
-
-.animation-multiplier {
     animation-duration: 1s;
     animation-name: heartbeat;
     animation-iteration-count: infinite;
