--- a/style.css
+++ b/style.css
@@ -115,6 +115,11 @@ body {
     border-radius: 1.5em;
     justify-self: center;
     box-shadow: 0px 4px 6px 2px rgba(0, 0, 0, 0.50);
+    transition: all .1s ease-in-out; 
+}
+
+.btn:active{
+    transform:scale(0.88)
 }
 
 .btn,
