Change visibility score button

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ footer {
     animation-name: heartbeat;
     animation-iteration-count: infinite;
     transform-origin: center;
+    display: none;
 }
 
 @keyframes heartbeat {
