--- a/style.css
+++ b/style.css
@@ -6,6 +6,27 @@ body {
     background-color: #FE2555;
 }
 
+main {
+    max-width: 700px;
+}
+
+picture {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #403a44;
+    color: white;
+}
+
 #scoredisplay {
     width : 90%;
     margin-right: 5%;
@@ -69,22 +90,25 @@ body {
     }
 }
 
-.clicker {
+/* .clicker {
     display:block;
     padding-left: 50px;
-    padding-right: 50px;
+    padding-right: 50px; 
     width: 250px;
-}
+} */
 
-.clicker{
+/*.clicker{
     display:flex;
-    
     justify-content: center;
     flex-direction:row;
-}
+}*/
+
 .clickercontainer img{
     position: relative;
     transition: all .1s ease-in-out; 
+    place-self: center center ;
+    max-height: 340px;
+    width: 70%;
 }
 
 .clickercontainer img:hover{ 
@@ -93,10 +117,6 @@ body {
 
 .clickercontainer img:active{ 
     transform: scale(0.98);
-}
-
-body {
-    background-color: #FE2555;
 }
 
 .row {
@@ -117,10 +137,12 @@ body {
     box-shadow: 0px 4px 6px 2px rgba(0, 0, 0, 0.50);
     transition: all .1s ease-in-out; 
 }
-
-.btn:active{
-    transform:scale(0.88)
+ 
+.btn:active {
+    filter: grayscale(0.2) brightness(1.2);
+    transform: scale(0.95);
 }
+
 
 .btn,
 .btn-price p {
@@ -213,65 +235,15 @@ body {
         height: 80%;
     }
     .row {
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 100px);
         grid-template-columns: 1fr;
         row-gap: 25px;
-    }
-    body {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 100px 1fr 100px;
     }
 
     main {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 100px 100px 100px;
-        grid-area: 2/2/3/3;
-    }
-
-    main .clickercontainer {
-        display: grid;
-        grid-area: 1/1/4/2;
-    }
-
-    main .btn_blue_active {
-        display: grid;
-        grid-area: 1/2/2/3;
-    }
-
-     main .btn_grey_active {
-        display: grid;
-        grid-area: 2/2/3/3;
-    }
-
-     main .btn_gold_active {
-        display: grid;
-        grid-area: 3/2/4/3;
-    }
-
-     main .btn_blue_disable {
-        display: grid;
-        grid-area: 1/2/2/3;
-    }
-
-    main .btn_grey_disable {
-        display: grid;
-        grid-area: 2/2/3/3;
+        margin: auto;
     }
     
-    main .btn_gold_disable {
-        display: grid;
-        grid-area: 3/2/4/3;
-    }
-    
-    header {
-        display: grid;
-        grid-area: 1/2/2/3;
-    }
-
-    footer {
-        display: grid;
-        grid-area: 3/2/4/3;
-    }
 }
